<resources>

    <string name="app_name">SELLby mall</string>
    <string name="front_view">FrontView</string>
    <string name="ksh">ksh-</string>
    <string name="app_id">ca-app-pub-4449860337549137~6071454334</string>
    <string name="back_view">BackView</string>
    <string name="side_view">SideView</string>
    <string name="item_name">  @BusinessName\n
                               ItemName</string>
    <string name="item_description">Item description\n
    size,specs</string>
    <string name="cost_ksh">Cost-KSh\n
        per Item </string>
    <string name="phone_no">Phone No</string>
    <string name="post">Post</string>
    <string name="take_pic">Take pic -> SELLit</string>
    <string name="charge">Post-Charge</string>
    <string name="click_me">3Dview-Phone?\n
                                  Click Me!</string>
    <string name="location">Your Location\n
                             place-town</string>
    <string name="ready">Ready to post? Click your item cost!</string>
    <string name="appreciate">please appreciate the CloudPlatform via developer\n
                                                         M-pesa to 0703 934 731(Kabiru)</string>
    <string name="search">Search</string>
    <string name="buyit">SELLit\n
                         BUYit</string>
    <string name="welcome">WELCOME</string>
    <string name="ADMOB_ADS_UNIT_ID">ca-app-pub-1935496978933122/3206443222</string>
    <string name="ADMOB_ID">ca-app-pub-1935496978933122/3462919516</string>
    <string name="ad_attribution">Ad</string>
    <string name="skip_ad">Skip AD</string>
    <string name="sellby_mall">SELLBY MALL</string>
    <string name="action_settings">Settings</string>
    <string name="interstitial_ad_sample">Interstitial Ad Sample</string>
    <string name="start_level">Level 1</string>
    <string name="next_level">Next Level</string>
    <string name="level_text">Level %1$d</string>

    <string name="interstitial_ad_id">ca-app-pub-2859523091876979/1149792960</string>
    <string name="admob_app_id">ca-app-pub-2859523091876979~3346309958</string>
    <string name="my_dashboard">My Dashboard</string>
    <string name="home">Home</string>
    <string name="furniture">Furniture</string>
    <string name="beauty">Beauty</string>
    <string name="fashion">Fashion</string>
    <string name="electronics">Electronics</string>
    <string name="books">Books</string>
    <string name="cars">Cars $ Bikes</string>
    <string name="phones">Phones</string>
    <string name="latest">Latest</string>
    <string name="rentals_hotels">Rentals/Hotels</string>
    <string name="cakes_events">Cakes $ Events</string>
    <string name="animals">Animals</string>
    <string name="phone_3d_view">Phone 3D View</string>
</resources>
