<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


<androidx.constraintlayout.widget.ConstraintLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
     >

    <Button
        android:id="@+id/btn_front"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
       android:textAllCaps="false"
        android:layout_marginTop="4dp"
        android:layout_marginRight="0.5dp"
        android:layout_marginBottom="4dp"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="src_in"
        android:text="@string/front_view"
        app:layout_constraintBottom_toTopOf="@+id/vf"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back_view"
        android:backgroundTint="@color/colorAccent"
        android:backgroundTintMode="src_in"
        tools:ignore="UnusedAttribute"
        android:background="@drawable/roundedbutton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/vf"
        android:layout_marginBottom="4dp"
        android:layout_marginRight="0.5dp"
        app:layout_constraintRight_toLeftOf="@+id/btn_side"
        app:layout_constraintLeft_toRightOf="@+id/btn_front"
        android:layout_marginLeft="0.5dp"/>



    <Button
        android:id="@+id/btn_side"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/side_view"
        android:textAllCaps="false"
        android:backgroundTintMode="src_in"
        tools:ignore="UnusedAttribute"
        android:background="@drawable/roundedbutton"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/vf"
        android:layout_marginBottom="4dp"
        app:layout_constraintRight_toLeftOf="@id/btn_charge"
        android:layout_marginRight="0.5dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_back"
        android:layout_marginLeft="0.5dp" />

    <Button
        android:id="@+id/btn_charge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/gradient"
        android:backgroundTintMode="src_in"
        android:text="@string/charge"
        tools:ignore="UnusedAttribute"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/vf"
        android:layout_marginBottom="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="4dp"
        app:layout_constraintLeft_toRightOf="@+id/btn_side"
        android:layout_marginLeft="0.5dp"/>

    <Button
        android:id="@+id/btn_post"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="false"
        android:background="@drawable/roundedbutton"
        android:backgroundTint="@color/colorAccent"
        android:text="@string/post"
        tools:ignore="UnusedAttribute"
        app:layout_constraintTop_toBottomOf="@+id/relative_layout"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="4dp"
        app:layout_constraintLeft_toLeftOf="@+id/relative_layout"
        android:layout_marginLeft="120dp"
        />

    <ViewFlipper
        android:id="@+id/vf"
        android:layout_height="300dp"
        android:layout_width="300dp"
        app:layout_constraintTop_toTopOf="@+id/btn_front"
        android:layout_marginTop="4dp"
        app:layout_constraintBottom_toTopOf="@+id/relative_layout"
        android:layout_marginBottom="4dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginRight="4dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="4dp"
        android:autoStart="false"

        >

        <ImageView
            android:id="@+id/picha"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/finepic"
            android:layout_gravity="center_horizontal"/>

        <ImageView
            android:id="@+id/picha_1"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/finepic"
            android:layout_gravity="center_horizontal"
            />
        <ImageView
            android:id="@+id/picha_2"
            android:layout_width="300dp"
            android:layout_height="300dp"
            app:srcCompat="@drawable/finepic"
            android:layout_gravity="center_horizontal"
            />




    </ViewFlipper>

    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/vf">

        <EditText
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/item_name"
            android:importantForAutofill="no"
            android:inputType="textMultiLine"
            android:text="" />

        <EditText
            android:id="@+id/Phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_name"
            android:ems="10"
            android:hint="@string/phone_no"
            android:inputType="phone"
            android:text="" />

        <EditText
            android:id="@+id/item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_price"
            android:layout_toEndOf="@id/Phone"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:text="" />

        <TextView
            android:id="@+id/URL"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/item_location"
            android:layout_toEndOf="@+id/item_description"
            android:text="" />

        <EditText
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/Phone"
            android:gravity="start|top"
            android:hint="@string/item_description"
            android:inputType="textMultiLine"
            android:text="" />

        <EditText
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/Phone"
            android:hint="@string/cost_ksh"
            android:inputType="number"
            android:text=""

            />
    </RelativeLayout>


</androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
