<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DashboardActivity"
    android:background="@color/black">

    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:orientation="vertical">
        
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/my_dashboard"
            android:textSize="20sp"
            android:textColor="@color/white"
            android:layout_margin="10dp"
            android:layout_gravity="center"/>
            
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:rowCount="5"
            android:columnCount="2"

            android:layout_margin="28dp"
            android:alignmentMode="alignMargins"
            android:layout_gravity="center"
            android:columnOrderPreserved="false"
            >
            <androidx.cardview.widget.CardView
                android:id="@+id/home"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/latest"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/latest"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/phones"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/phones"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/phones"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/cars"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/cars_bikes"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/cars"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/Stationery"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/books"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/books"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Electronics"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/electronics"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/electronics"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/Fashion"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/fashion"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/fashion"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/Rentals"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:src="@drawable/rentals_hotels"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/white"
                        android:text="@string/rentals_hotels"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/Furniture"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:cardCornerRadius="12dp"
            app:cardElevation="5dp"
            app:cardBackgroundColor="@color/color"
            android:layout_margin="5dp"
            >


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:gravity="center">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/furniture"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16sp"
                    android:textColor="@color/white"
                    android:text="@string/furniture"
                    android:visibility="visible"
                    android:elevation="5dp"
                    android:layout_margin="4dp"
                    android:layout_alignParentTop="true"
                    />

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/Cakes"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:src="@drawable/cakes_events"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/transparentBlack"
                        android:text="@string/cakes_events"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>
            <androidx.cardview.widget.CardView
                android:id="@+id/Animals"
                android:layout_width="150dp"
                android:layout_height="150dp"
                app:cardCornerRadius="12dp"
                app:cardElevation="5dp"
                app:cardBackgroundColor="@color/color"
                android:layout_margin="5dp"
                >


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:gravity="center">

                    <ImageView
                        android:layout_width="170dp"
                        android:layout_height="170dp"
                        android:src="@drawable/animals"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/black"
                        android:text="@string/animals"
                        android:visibility="visible"
                        android:elevation="5dp"
                        android:layout_margin="4dp"
                        android:layout_alignParentTop="true"
                        />

                </RelativeLayout>

            </androidx.cardview.widget.CardView>




        </GridLayout>
        
    </LinearLayout>
    
    
    
</ScrollView>
