<?xml version="1.0" encoding="utf-8"?>
    <androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_margin="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="8dp"

        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/gradient_1"
        >

        <TextView
            android:id="@+id/item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:ems="20"
            android:hint="@string/item_name"
            android:importantForAutofill="no"
            android:text=""
            android:textColor="@color/colorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            android:gravity="center"
            app:layout_constraintBottom_toTopOf="@+id/vf2"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ViewFlipper
            android:id="@+id/vf2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:autoStart="false"
            android:inAnimation="@android:anim/slide_in_left"
            android:outAnimation="@android:anim/slide_out_right"
            app:layout_constraintBottom_toTopOf="@id/item_location"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/item_name"
            tools:ignore="UnusedAttribute">

            <ImageView
                android:id="@+id/picha"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/finepic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/picha_1"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/finepic"
                android:layout_gravity="center_horizontal"/>

            <ImageView
                android:id="@+id/picha_2"
                android:layout_width="300dp"
                android:layout_height="300dp"
                app:srcCompat="@drawable/finepic"
                android:layout_gravity="center_horizontal" />


        </ViewFlipper>


        <TextView
            android:id="@+id/Phone_No"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:ems="10"
            android:hint="@string/click_me"
            android:text=""
            app:layout_constraintBottom_toTopOf="@+id/item_description"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@+id/item_price"
            app:layout_constraintTop_toBottomOf="@+id/item_location"
            android:textSize="16sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <TextView
            android:id="@+id/item_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/location"
            android:importantForAutofill="no"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/Phone_No"
            app:layout_constraintHorizontal_bias="0.178"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_price"
            app:layout_constraintTop_toBottomOf="@+id/vf2" />

        <TextView
            android:id="@+id/item_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/item_description"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.24"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/item_price"
            app:layout_constraintTop_toBottomOf="@+id/Phone_No" />

        <TextView
            android:id="@+id/item_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginRight="2dp"
            android:layout_marginBottom="2dp"
            android:hint="@string/cost_ksh"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/Phone_No"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vf2"
            android:textSize="16sp"
            android:textColor="#54E91E"
            android:textStyle="bold"/>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>


